Created Post function to Django database

--- a/businesses/templates/businesses/signup.html
+++ b/businesses/templates/businesses/signup.html
@@ -9,8 +9,8 @@
 <h1>Testing template</h1>
 <form action="" method="POST">
 {% csrf_token %}
-Title: <input type="text" name="Name"/><br/>
-Content: <input type="text" name="Location"/><br/>
+Name: <input type="text" name="Name"/><br/>
+Location: <input type="text" name="Location"/><br/>
 <input type="submit" value="Post"/>
 </form>
 
